--- a/config/secrets.yml
+++ b/config/secrets.yml
@@ -1,5 +1,8 @@
 test:
   secret_key_base: <%= ENV["SECRET_KEY_BASE"] %>
-  
+
 production:
+  secret_key_base: <%= ENV["SECRET_KEY_BASE"] %>
+
+development:
   secret_key_base: <%= ENV["SECRET_KEY_BASE"] %>
